# alfatec

./: .gitignore  README.md
alfatec-assistant/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
alfatec-assistant/response_creator/: prompts.py  response_creator.py
alfatec-assistant/search_engine/: prompts.py  search_engine.py
alfatec-assistant/static/: style_chatbot_copilot.css  style_login.css
alfatec-assistant/templates/: chatbot_copilot.html  login.html
alfatec-assistant/utils/: auth.py  chat_kernel.py  chat_utils.py  models.py  progress.py  prompts.py  states.py  users.py
alfatec-vectorization/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alfatec-vectorization/scripts/: api.py  vectorization.py
alfatec-vectorization/streamlit_app/: streamlit_dashboard.py
alfatec-vectorization/utils/: chat_utils.py
data_creation/: README.md  crontab_config.txt  eml_exploration.py  error_logs.json  nextcloud.py  processed_emails_index.json  pyproject.toml
