[tool.poetry]
name = "alfatec-assistant"
version = "0.1.0"
description = ""
authors = ["Daniel Espinoza <danielx.1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
setuptools = "^75.3.0"
openai = ">=1.0"
pandas = "^2.2.2"
ruff = "^0.5.2"
azure-cognitiveservices-speech = "^1.37.0"
semantic-kernel = "^1.14.0"
flask = "^3.0.3"
scikit-learn = "^1.5.1"
authlib = "^1.3.2"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
azure-storage-blob = "^12.22.0"
quart = "^0.19.6"
hypercorn = "^0.17.3"
aioauth-client = "^0.28.1"
pyjwt = "^2.9.0"
asyncpg = "^0.30.0"
flask-session = "^0.8.0"
quart-session = "^3.0.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
pydantic = "==2.9.2"
RapidFuzz = "^3.0.0"
dateparser = "^1.2.0"
webdavclient3 = "^3.14.6"
beautifulsoup4= "^4.12.3"
regex = "^2024.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"