[tool.poetry]
name = "alfatec-vectorization"
version = "0.1.0"
description = ""
authors = ["Daniel Espinoza <danielx.1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
setuptools = "^75.3.0"
openai = ">=1.0"
pandas = "^2.2.2"
ruff = "^0.5.2"
semantic-kernel = "^1.14.0"
python-dotenv = "1.0.1"
aiohttp = "3.11.12"
langchain = "0.3.17"
langchain-community = "0.3.16"
langchain-openai = "0.3.3"
faiss-cpu = "1.10.0"
watchdog = "6.0.0"
streamlit = "1.41.1"
tqdm = "4.67.1"
dateparser = "^1.2.0"
webdavclient3 = "^3.14.6"
beautifulsoup4 = "^4.12.3"
regex = "^2024.11.6"
fastapi = "0.115.8"
uvicorn = "0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"