[tool.poetry]
name = "data_creation"
version = "0.1.0"
description = ""
authors = ["Daniel Espinoza <danielx.1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
setuptools = "^75.3.0"
dateparser = "^1.2.0"
webdavclient3 = "^3.14.6"
beautifulsoup4= "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"